updated frontend templates

--- a/frontend/templates/includes/django-material-dashboard/export-formats.html
+++ b/frontend/templates/includes/django-material-dashboard/export-formats.html
@@ -1,3 +1,4 @@
+{% load custom_filter_list %}
 <div class="dropdown">
   <a href="#" class="btn bg-gradient-dark dropdown-toggle " data-bs-toggle="dropdown" id="navbarDropdownMenuLink">
 <i class="fa fa-file-export" aria-hidden="true"></i>
