--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -69,5 +69,5 @@
     <script src="{% static 'assets/js/django/urlify.js' %}"></script>
     <script src="{% static 'assets/js/django/prepopulate.js' %}"></script>
     <script src="{% static 'assets/js/django/vendor/xregexp/xregexp.js' %}"></script>
-    <script src="{% static 'assets/js/django/selectbox_all.js' %}"></script>
+    <script src="{% static 'assets/js/selectbox_all.js' %}"></script>
 {% endblock javascripts %}
