--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -30,10 +30,8 @@
 
       {% endfor %}
           </div>
+          <button type="submit" value="Submit" class="btn bg-gradient-dark">Submit</button>
 
-        <div class="col-md-6 text-end ms-auto">
-          <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Submit</button>
-        </div>
 
 
 </form>
