--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -1,6 +1,4 @@
-{% block extrahead %}
-    {{ filter.form.media }}
-{% endblock %}
+{% block extrahead %} {{ filter.form.media }} {% endblock %}
 
 {% load html_tags %}
 <!-- START FORM ERRORS -->
@@ -11,28 +9,24 @@
 <!-- START FORM -->
 <form action="" method="get" class="changelist-form p-3">
   {% csrf_token %}
-
-      <div class="row">
-      {% for field in filter.form %}
-
-       <div class="col-md-3">
-       {{ field.errors }}
-       {{ field.label_tag }}
-       <div class="{% if field.field.widget|field_type == 'CustomRadioSelect' %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
-        {{ field }}
-       </div>
-       {% if field.help_text %}
-       <div class="row">
-           <p class="help">{{ field.help_text|safe }}</p>
-       </div>
-       {% endif %}
-   </div>
-
-      {% endfor %}
-          </div>
-          <button type="submit" value="Submit" class="btn bg-gradient-dark">Submit</button>
-
-
-
+    <div class="row">
+        {% for field in filter.form %}
+        <div class="col-md-3">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            <div class="{% if field.field.widget|field_type == 'CustomRadioSelect' %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
+                {{ field }}
+            </div>
+            {% if field.help_text %}
+            <div class="row">
+                <p class="help">{{ field.help_text|safe }}</p>
+            </div>
+            {% endif %}
+        </div>
+        {% endfor %}
+    </div>
+    <div class="col-md-3 text-end ms-auto">
+        <button type="submit" value="Submit" class="btn bg-gradient-dark">Submit</button>
+    </div>
 </form>
 <!-- END FORM -->
