--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -14,7 +14,7 @@
     <div class="col-12">
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-          <div class="bg-gray-200 shadow-secondary border-radius-lg pt-4 pb-3">
+          <div class="bg-gradient-secondary shadow-secondary border-radius-lg pt-4 pb-3">
             <h6 class="text-white text-capitalize ps-3">{{ page_title|title }} Table</h6>
                 <!-- START filter -->
                 {% if filter %}
