updated template style

--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -13,7 +13,7 @@
         {% for field in filter.form %}
         <div class="col-md-4">
             {{ field.errors }}
-            <div class="text-white text-capitalize ps-3">{{ field.label_tag }}</div>
+            <span class="text-white text-capitalize ps-3">{{ field.label_tag }}</span>
             <div class="{% if field.field.widget|field_type == 'CustomRadioSelect' %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
                 {{ field }}
             </div>
