updated template style

--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -26,7 +26,7 @@
         {% endfor %}
 
     <div class="col-md-3 text-end ms-auto">
-        <button type="submit" value="Submit" class="btn bg-gradient-dark">Submit</button>
+        <button type="submit" value="Submit" class="btn bg-gradient-white">Submit</button>
     </div>
          </div>
 </form>
