--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -24,10 +24,11 @@
             {% endif %}
         </div>
         {% endfor %}
-
-    <div class="col-md-3 text-end ms-auto">
-        <button type="submit" value="Submit" class="btn bg-gradient-white">Submit</button>
+        <div class="row">
+            <div class="col-md-6 text-end ms-auto">
+                <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Submit</button>
+            </div>
+        </div>
     </div>
-         </div>
 </form>
 <!-- END FORM -->
