--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -7,10 +7,10 @@
 {% endif %}
 <!-- END FORM ERRORS -->
 <!-- START FORM -->
-<form action="" method="get" class="changelist-form p-3">
+<form action="" method="get" id="changelist-form" class="p-3">
   {% csrf_token %}
     <div class="row">
-        <div class="col-md-6 text-end ms-auto">
+        <div class="col-md-3 text-end">
             <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Submit</button>
         </div>
     </div>
