--- a/frontend/templates/includes/django-material-dashboard/filter-form.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-form.html
@@ -11,7 +11,8 @@
   {% csrf_token %}
     <div class="row">
         <div class="col-md-3 text-end">
-            <button type="submit" value="Submit" class="btn bg-gradient-light w-100">Filter</button>
+            <button type="submit" value="Submit" class="btn bg-gradient-light w-100">
+                <i class="fa fa-filter" aria-hidden="true"></i> Filter</button>
         </div>
     </div>
     <div class="row">
