--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -31,7 +31,7 @@
                 <!-- START export options -->
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa fa-file-export" aria-hidden="true"></i>
+                        <i class="fa fa-file-export" aria-hidden="true"></i> Export
                     </button>
 
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" style>
