updated template style

--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -43,6 +43,7 @@
                 <!-- END export options -->
   </div>
                 <!-- START table -->
+                {% custom_filter_actions %}
                 {% render_table table %}
                 <!-- END table -->
             </div>
