updated container div for rendered table

--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -44,7 +44,9 @@
   </div>
                 <!-- START table -->
                 {% custom_filter_actions %}
+                <div class="results changelist-form-results">
                 {% render_table table %}
+                </div>
                 <!-- END table -->
             </div>
         </div>
