added load for django javascript catalog jsi18n

--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -55,4 +55,5 @@
     <script src="{% static 'assets/js/django/prepopulate.js' %}"></script>
     <script src="{% static 'assets/js/django/vendor/xregexp/xregexp.js' %}"></script>
     <script src="{% static 'assets/js/selectbox_all.js' %}"></script>
+    <script src="{% url 'jsi18n' %}"></script>
 {% endblock javascripts %}
