--- a/frontend/templates/custom_admin/actions.html
+++ b/frontend/templates/custom_admin/actions.html
@@ -2,12 +2,12 @@
 {% block extrahead %}
 <script type="text/javascript">
 $(document).ready(function($){
-    $("input.action-checkbox[type='checkbox']").change(function (e) {
+    $("input.action-select[type='checkbox']").change(function (e) {
         if ($(this).is(":checked")) { //If the checkbox is checked
-            $(this).closest('tr').addClass("selected");
+            $(this).closest('td').addClass("selected");
             //Add class on checkbox checked
         } else {
-            $(this).closest('tr').removeClass("selected");
+            $(this).closest('td').removeClass("selected");
             //Remove class on checkbox uncheck
         }
     });
