--- a/frontend/templates/custom_admin/actions.html
+++ b/frontend/templates/custom_admin/actions.html
@@ -45,16 +45,15 @@ $(document).ready(function($){
   {% block actions %}
     <div class="row">
     {% block actions-form %}
-
+<div class="col-md-3">
     {% for field in action_form %}
-        <div class="col-md-3">
-            {% if field.label %}
-            <label>{{ field.label }} {% endif %}{{ field }}{% if field.label %}
-            </label>
-            {% endif %}
-        </div>
-        {% endfor %}
 
+            {% if field.label %}
+            <label>{{ field.label }} {% endif %}{{ field }}{% if field.label %}</label>
+            {% endif %}
+
+        {% endfor %}
+</div>
             {% endblock %}
     {% block actions-submit %}
         <div class="col-md-3">
