updated table th

--- a/frontend/templates/django_tables2/table.html
+++ b/frontend/templates/django_tables2/table.html
@@ -9,7 +9,7 @@
                 <thead {{ table.attrs.thead.as_html }}>
                     <tr>
                     {% for column in table.columns %}
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" {{ column.attrs.th.as_html }}>
+                        <th scope="col" {{ column.attrs.th.as_html }}>
                             {% if column.orderable %}
                                 <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}">{{ column.header }}</a>
                             {% else %}
