--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -32,7 +32,7 @@
                 {% custom_filter_actions %}
                 <!-- END export options -->
                 <!-- START table -->
-                <div class="results changelist-form-results">
+                <div class="results">
                 {% render_table table %}
                 </div>
                 <!-- END table -->
