fixed url reference field for edit in smaplelabelrequest template

--- a/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
@@ -19,7 +19,7 @@
           <h3 class="text-center">{{ page_title|title }} Detail</h3>
         </div>
           <div class="col-md-4 text-end">
-            <a href="{% url {{ segment }} %}">
+            <a href="{% url 'update_samplelabelrequest' %}">
               <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit {{ page_title|title }}"></i>
             </a>
           </div>
