fixed url in samplelabelrequest detail

--- a/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
@@ -24,7 +24,7 @@
             </a>
           </div>
         <div class="col-md-1 text-end">
-            <a href="{% url 'add_samplelabelrequest' object.site_id.id object.sample_material.id object.purpose %}">
+            <a href="{% url 'add_samplelabelrequestdetail' object.site_id.id object.sample_material.id object.purpose %}">
               <i class="material-icons text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Add {{ page_title|title }}">add_box</i>
             </a>
           </div>
