--- a/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
@@ -18,13 +18,16 @@
         <div class="col-md-8 d-flex align-items-center">
           <h3 class="text-center">{{ page_title|title }} Detail</h3>
         </div>
-        <div class="col-md-4 text-end">
+        <div class="col-md-1 text-end">
             <a href="{% url 'view_samplelabelrequest' %}">
               <i class="material-icons text-secondary text-center me-2 d-flex align-items-center justify-content-center text-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="View {{ page_title|title }}">table_view</i>
             </a>
+          </div>
+        <div class="col-md-1 text-end">
             <a href="{% url 'add_samplelabelrequestdetail' object.site_id.id object.sample_material.id object.purpose %}">
               <i class="material-icons text-secondary text-center me-2 d-flex align-items-center justify-content-center text-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Add {{ page_title|title }}">add_box</i>
             </a>
+          </div>
           <div class="col-md-1 text-end">
             <a href="{% url 'update_samplelabelrequest' object.pk %}">
               <i class="fas fa-user-edit text-secondary text-center me-2 d-flex align-items-center justify-content-center text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit {{ page_title|title }}"></i>
