--- a/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-samplelabelrequest.html
@@ -14,8 +14,8 @@
         <span class="mask bg-gradient-dark opacity-6"></span>
     </div>
     <div class="card card-body mx-3 mx-md-4 mt-n6">
-      <div class="row">
-        <div class="col-md-8 d-flex align-items-center">
+      <div class="row m-3">
+        <div class="col-md-9 d-flex align-items-center">
           <h3 class="text-center">{{ page_title|title }} Detail</h3>
         </div>
         <div class="col-md-1 d-flex align-items-center">
@@ -35,8 +35,8 @@
           </div>
       </div>
       <!-- insert detail view here -->
-      <div class="row">
-        <div class="card-body p-3">
+      <div class="row m-3">
+        <div class="card-body">
           <hr class="horizontal gray-light my-2">
           <ul class="list-group">
             <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Sample Label Prefix:</strong> &nbsp; {{ object.sample_label_prefix }}</li>
